<resources>
    <string name="app_name">RockPaperSciccors</string>
    <string name="rock">Rock</string>
    <string name="paper">Paper</string>
    <string name="scissors">scissors</string>
    <string name="welcome">Welcome</string>
    <string name="vs">V.S.</string>
    <string name="instructions">Instructions: select rock, paper, or scissor to play</string>
    <string name="user_win">You win!</string>
    <string name="computer_win">Computer wins!</string>
    <string name="draw">Draw!</string>
    <string name="computer">Computer</string>
    <string name="user">You</string>
    <string name="open_history">Open history</string>
    <string name="delete_history">Delete history</string>
    <string name="match_result">Wins: %1$d Losses: %2$d Draw: %3$d</string>
</resources>
